# mom

./: README.md  swiggy-mcp-docs.md
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/scripts/: probe_mcp.py  smoke_live.py  swiggy_login.py
backend/src/meal_agent/: __init__.py  settings.py
backend/src/meal_agent/agent/: __init__.py  graph.py  state.py
backend/src/meal_agent/agent/nodes/: __init__.py  build_cart.py  compose_proposal.py  discover.py  interpret_prompt.py  pick_dish.py  place_order.py  review_cart.py  shortlist.py
backend/src/meal_agent/agent/templates/: __init__.py  interpret.py
backend/src/meal_agent/api/: __init__.py  app.py  routes.py
backend/src/meal_agent/persona/: __init__.py  loader.py  schema.py
backend/src/meal_agent/persona/packs/: bawarchi-v1.yaml  mom-v1.yaml
backend/src/meal_agent/storage/: __init__.py  audit.py  checkpointer.py
backend/src/meal_agent/tools/: __init__.py  llm.py  mcp_envelope.py  swiggy_mcp.py
backend/tests/: __init__.py  conftest.py  test_agent_e2e.py  test_graph_integration.py  test_interpret_prompt.py  test_nodes_impl.py
frames/: screens.html
frontend/: README.md  pnpm-lock.yaml
frontend/public/: manifest.webmanifest  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/debug/: page.tsx
frontend/src/components/: CartConfirm.tsx  GiveUp.tsx  Pakka.tsx  Phone.tsx  ServiceWorkerRegistrar.tsx  Suggestion.tsx
frontend/src/lib/: api.ts  persona.ts  slots.ts  useRun.ts
frontend/src/types/: agent.ts
(+4 files in other folders)
